<resources>
    <string name="app_name">Order Confirmation</string>
    <string name="Address">Shipping Address</string>
    <string name="exAddress">No 5/A, Central Park,new York</string>
    <string name="paym">Select Payment method</string>
    <string name="editDetails">Edit Shipping Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


 <string name="advertisment_title">Advertisment Title</string>
    <string name="avurudu_promotion">Avurudu promotion</string>
    <string name="advertisement_description">Advertisement Description</string>
    <string name="ad_desc_sample">Hurry up, buy this product before the offer run out</string>
    <string name="ad_discount">Discount in (%)</string>
    <string name="_10">10</string>
    <string name="select_image">Select Image</string>
    <string name="for_ad">For</string>
    <string name="sample_ad_title">sample ad title</string>
    <string name="add_delete_button">add delete button</string>
    <string name="add_edit_button">add edit button</string>
    <string name="buy_this_item">Buy This item</string>
    <string name="update_advertisement">Update Advertisement</string>
</resources>