<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/list_ad_image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/select_image"
            android:src="@drawable/gardient" />

        <TextView
            android:id="@+id/ad_list_ad_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_ad_image_view"
            android:text="@string/sample_ad_title"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginVertical="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ad_list_ad_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ad_list_ad_title"
            android:layout_marginVertical="5dp"
            android:text="@string/ad_desc_sample"
            android:textColor="@color/black"
            android:textSize="18sp"

            />

        <TextView
            android:id="@+id/ad_list_discount_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ad_list_ad_desc"
            android:layout_marginEnd="4dp"
            android:text="@string/ad_discount"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ad_list_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ad_list_ad_desc"
            android:layout_toEndOf="@+id/ad_list_discount_tag"
            android:text="@string/_10"
            android:textColor="@color/black"
            android:textSize="18sp"

            />

        <ImageButton
            android:id="@+id/ad_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ad_list_discount"
            android:layout_marginStart="1dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@+id/ad_update_btn"
            android:contentDescription="@string/add_delete_button"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_delete"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/ad_update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ad_list_discount"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/add_edit_button"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_edit"
            android:visibility="gone" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>