<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F0F1F6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"

            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:padding="15dp"
                    android:text="@string/Address"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/round_corner_bottom">


                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"

                    android:textSize="18dp" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_input_add"
                    android:layout_marginLeft="320dp"
                    android:layout_marginTop="30dp"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:padding="10dp"
                    android:text="@string/paym"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:background="@drawable/round_corner">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:text="Credit Card"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="142dp"
                    tools:layout_editor_absoluteY="418dp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="95dp"

                    app:srcCompat="@drawable/credit_card"
                    tools:layout_editor_absoluteX="127dp"
                    tools:layout_editor_absoluteY="424dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/round_corner_bot">

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:text="Cash on delivery"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="142dp"
                    tools:layout_editor_absoluteY="418dp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    app:srcCompat="@drawable/cash" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="58dp">

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/editDetails"

                    app:backgroundTint="#03A9F4"
                    tools:layout_editor_absoluteX="116dp"
                    tools:layout_editor_absoluteY="405dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:padding="15dp"
                    android:text="Items"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="122dp"
                    android:layout_height="107dp"
                    app:srcCompat="@android:drawable/ic_menu_gallery"
                    tools:layout_editor_absoluteX="10dp"
                    tools:layout_editor_absoluteY="441dp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/round_corner">


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:padding="15dp"
                    android:text="Sub Total"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="18dp"
                    android:layout_marginLeft="300dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="#FFFFFF">


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:padding="15dp"
                    android:text="Shipping Fee"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                android:layout_marginLeft="300dp"
                    android:textSize="18dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/round_corner_bot">


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:padding="15dp"
                    android:text="TOTAL PRICE"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="18dp"
                    android:layout_marginLeft="300dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="1dp">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="PLACE ORDER"

                    app:backgroundTint="#03A9F4"
                    tools:layout_editor_absoluteX="116dp"
                    tools:layout_editor_absoluteY="405dp" />

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>


